# paladin-engine

./: .clang-format  .clangd  .gitignore  AUTHORING.md  CMakeLists.txt  Doxyfile.in  FBX_PLAN.md  UI_PLAN.md  compile.sh  compile_commands.json  imgui.ini
.github/workflows/: docs.yml
.playwright-mcp/: page-2026-04-25T17-34-06-755Z.yml  page-2026-04-25T17-34-27-088Z.yml
GD-Engine-lesson-3-8/: CMakeLists.txt
GD-Engine-lesson-3-8/engine/: CMakeLists.txt
GD-Engine-lesson-3-8/engine/source/: Engine.cpp
GD-Engine-lesson-3-8/engine/source/graphics/: GraphicsAPI.h  ShaderProgram.h  VertexLayout.h
GD-Engine-lesson-3-8/engine/source/render/: Mesh.h
GD-Engine-lesson-3-8/engine/source/scene/: Scene.cpp
assets/materials/: brick.mat  bullet.mat  checker.mat  dungeon_altar.mat  dungeon_banner.mat  dungeon_ceiling.mat  dungeon_dirt.mat  dungeon_floor.mat  dungeon_metal.mat  dungeon_pillar.mat  dungeon_ritual.mat  dungeon_wall.mat  dungeon_wood.mat  suzanne.mat
assets/scenes/: dungeon.json  scene.json  scene2.json  testing.json
assets/shaders/: basic.frag  cool.frag  fragment.glsl  green.frag  lab.frag  lab.vert  outline.frag  particle.frag  psx.frag  psx.vert  skinned.frag  skinned.vert  unlit.frag  unlit.vert  vertex.glsl
docs/: anvil-copy.js  custom.css  header.html  homepage.md
docs/GD-Engine-lesson-5-2/: CMakeLists.txt  README.md
docs/GD-Engine-lesson-5-2/assets/materials/: brick.mat
docs/GD-Engine-lesson-5-2/engine/: CMakeLists.txt
docs/GD-Engine-lesson-5-2/engine/source/: Engine.cpp
docs/GD-Engine-lesson-5-2/engine/source/graphics/: GraphicsAPI.h  ShaderProgram.h  Texture.h  VertexLayout.h
docs/GD-Engine-lesson-5-2/engine/source/physics/: CollisionObject.cpp
docs/GD-Engine-lesson-5-2/engine/source/render/: Mesh.h
docs/GD-Engine-lesson-5-2/engine/source/scene/: Scene.cpp
engine/: CMakeLists.txt  config.h.in
engine/source/: Application.cpp  Application.h  COA.h  Common.h  Constants.h  ENG.h  Engine.cpp  Engine.h  Log.cpp  Log.h  Monad.h  Types.h  modules.dox
engine/source/animation/: IdleClip.cpp  IdleClip.h  KeyFrame.h  Pose.cpp  Pose.h  SkeletalAnimationClip.h  Skeleton.cpp  Skeleton.h
engine/source/audio/: Audio.cpp  Audio.h  AudioManager.cpp  AudioManager.h
engine/source/editor/: Editor.cpp  Editor.h
engine/source/graphics/: GraphicsAPI.cpp  GraphicsAPI.h  PostProcess.cpp  PostProcess.h  RenderSettings.h  RenderTarget.cpp  RenderTarget.h  RendererBackend.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexLayout.h
engine/source/graphics/opengl/: OpenGLRendererBackend.cpp  OpenGLRendererBackend.h
engine/source/graphics/vulkan/: Context.h
engine/source/input/: InputManager.cpp  InputManager.h  Key.h
engine/source/io/: FileReader.cpp  FileReader.h  FileSystem.cpp  FileSystem.h  ModelImporter.cpp  ModelImporter.h
engine/source/physics/: CollisionObject.cpp  CollisionObject.h  KinematicCharacterController.cpp  KinematicCharacterController.h  PhysicsManager.cpp  RigidBody.cpp  RigidBody.h
engine/source/render/: Builder.cpp  Builder.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  ParticleSystem.h  RenderQueue.cpp  RenderQueue.h  SpriteRenderer.cpp  SpriteRenderer.h
engine/source/scene/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
engine/source/scene/components/: AnimationComponent.cpp  AnimationComponent.h  AudioComponent.cpp  AudioComponent.h  AudioListenerComponent.cpp  AudioListenerComponent.h  CameraComponent.cpp  CameraComponent.h  HealthComponent.cpp  HealthComponent.h  LightComponent.cpp  LightComponent.h  MeshComponent.cpp  MeshComponent.h  ParticleEmitterComponent.cpp  ParticleEmitterComponent.h  PhysicsComponent.cpp  PlayerControllerComponent.cpp  PlayerControllerComponent.h  SkinnedMeshComponent.cpp  SkinnedMeshComponent.h
engine/source/utils/: FileReader.cpp  FileReader.h
source/: Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  GameConstants.h  JumpPlatform.cpp  JumpPlatform.h  Lab.cpp  Lab.h  LabObject.cpp  LabObject.h  Player.cpp  Player.h  TestObject.cpp  TestObject.h  main.cpp
